round voxel dim precision to incoming dataset